tests/snapshots/lib__snapshots__report@invalid-target.env_filter.snap
---
source: tests/snapshots.rs
assertion_line: 30
expression: "crate=target=warn\n"
---

  ⚠ 1 directives were ignored as invalid

Error: tracing_filter::simple::Warning::InvalidTarget (https://docs.rs/tracing-filter/0.0.0-dev/tracing-filter/enum.Warning.html#variant.InvalidTarget)

  ⚠ invalid target directive specified
   ╭────
 1 │ crate=target=warn
   · ──────┬─────
   ·       │╰── this `=` is not allowed ...
   ·       ╰── ... in this target directive
   ╰────

